--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,9 @@
     }
   ],
   "require": {
+    "components/jquery": "3.2.1",
+    "bordercloud/tether": "1.1.1",
+    "twbs/bootstrap": "4.0.0-alpha.6"
   },
   "autoload": {
     "psr-4": {
