--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
   "require": {
     "components/jquery": "3.2.1",
     "bordercloud/tether": "1.1.1",
-    "twbs/bootstrap": "4.0.0-alpha.6"
+    "twbs/bootstrap": "4.0.0-alpha.6",
+    "gregwar/captcha": "1.*"
   },
   "autoload": {
     "psr-4": {
